Removed unused code

--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@
 Theme Name: Custom Theme
 Author: Admin
 Version: 1.6
-Text Domain : noblis-wp
+Text Domain : custom-wp
 Description: The Noblis template website theme.
 */
