--- a/source/scss/base/_typography.scss
+++ b/source/scss/base/_typography.scss
@@ -22,11 +22,13 @@ body {
     line-height: 1.5;
     font-weight: 500;
     background-color: $body-bg;
+
     // @include custom-scroll;
     @media screen and (-ms-high-contrast: active),
     (-ms-high-contrast: none) {
         height: 100%;
     }
+
     &.scroll-fixed {
         overflow: hidden;
     }
@@ -35,6 +37,7 @@ body {
 // Heading style
 @each $key,
 $size in $headingSize {
+
     #{$key},
     .#{$key} {
         margin-bottom: $hgroup-margin-bottom;
@@ -44,48 +47,60 @@ $size in $headingSize {
         font-weight: $hgroup-font-weight;
         line-height: $hgroup-line-height;
         word-break: keep-all;
+
         a {
             display: block;
             color: inherit;
             text-decoration: none;
         }
-        span{
+
+        span {
             font-weight: 400;
         }
+
         @if $key=="h1" {
             @include respond-below(xl) {
                 font-size: rem(42px);
             }
+
             @include respond-below(md) {
                 font-size: rem(36px);
             }
         }
+
         @else if $key=="h2" {
             @include respond-below(xl) {
                 font-size: rem(34px);
             }
+
             @include respond-below(md) {
                 font-size: rem(29px);
             }
         }
+
         @else if $key=="h3" {
             @include respond-below(md) {
                 font-size: rem(24px);
             }
         }
+
         @else if $key=="h4" {
             @include respond-below(md) {
                 font-size: rem(20px);
             }
         }
+
         @else if $key=="h5" {
             line-height: 1.3;
+
             @include respond-below(md) {
                 font-size: rem(18px);
             }
         }
+
         @else if $key=="h6" {
             line-height: 1.3;
+
             @include respond-below(md) {
                 font-size: rem(17px);
             }
@@ -95,6 +110,7 @@ $size in $headingSize {
 
 p {
     margin-bottom: rem(20px);
+
     &:last-child {
         margin-bottom: 0;
     }
@@ -106,8 +122,9 @@ p {
     padding-left: rem(10px);
     margin-bottom: rem(16px);
     display: inline-block;
+
     &:before {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
@@ -121,16 +138,24 @@ p {
     --ulolLeftPadding: #{rem(20px)};
     padding-left: var(--ulolLeftPadding);
     margin-bottom: rem(15px);
+
     :is(ul, ol) {
         margin-top: rem(12px);
         margin-bottom: 0;
     }
+
     li {
         padding-top: rem(6px);
         padding-bottom: rem(6px);
+
+        &:last-child {
+            padding-bottom: 0;
+        }
+
         .bullet-styled & {
             position: relative;
             list-style: none;
+
             &:before {
                 position: absolute;
                 left: calc(var(--ulolLeftPadding) * -1);
@@ -139,25 +164,28 @@ p {
                 line-height: 1;
             }
         }
-        &:last-child {
-            padding-bottom: 0;
-        }
     }
 }
 
 ul {
     >li {
+        &::marker {
+            color: $secondary-100;
+            font-size: 1.2em;
+        }
+
         .bullet-styled & {
             --ulBox: 8px;
+
             &::before {
                 content: "";
                 top: rem(14px);
                 width: var(--ulBox);
                 height: var(--ulBox);
-                background: transparent;
+                background: $secondary-100;
                 border-radius: 100%;
-                border: 2px solid $secondary-100;
             }
+
             >ul {
                 >li {
                     &::before {
@@ -165,9 +193,15 @@ ul {
                         height: rem(6px);
                         width: rem(6px);
                     }
+
                     >ul {
                         >li {
                             --ulBox: 4px;
+
+                            &::marker {
+                                color: currentColor;
+                            }
+
                             &::before {
                                 top: em(16px);
                                 background: currentColor;
@@ -178,13 +212,15 @@ ul {
                 }
             }
         }
+
         .bullet-check & {
             --ulBox: 24px;
             padding: 0 0 0 rem(36px);
             margin-bottom: rem(10px);
             position: relative;
+
             &::before {
-                @include icon('k');
+                @include icon("k");
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -193,17 +229,20 @@ ul {
                 font-size: 24px;
                 color: $primary-100;
                 @include flex-center();
-                .bg-dark &{
+
+                .bg-dark & {
                     // color: $white;
                 }
             }
         }
+
         .bullet-check.-secondary & {
             &:before {
                 color: $secondary-100;
             }
         }
     }
+
     .bullet-check & {
         padding-left: 0;
         list-style: none;
@@ -214,15 +253,19 @@ ol {
     >li {
         .bullet-styled & {
             counter-increment: counter-1;
+
             &:before {
                 content: counter(counter-1) ". ";
                 top: 10px;
                 font-size: em(14px);
             }
+
             >ol {
                 counter-reset: counter-2;
+
                 >li {
                     counter-increment: counter-2;
+
                     &:before {
                         content: counter(counter-2, lower-alpha) ". ";
                     }
@@ -244,6 +287,7 @@ blockquote {
     color: $black;
     background-color: $gray;
     border-left: rem(4px) solid $primary-100;
+
     p {
         font-size: inherit;
         font-weight: inherit;
@@ -268,6 +312,7 @@ img {
     max-width: 100%;
     vertical-align: top;
     border: none;
+
     &[src$=".svg"] {
         max-height: 100%;
     }
@@ -282,32 +327,39 @@ picture {
 ------------------------------------------------------------------------------*/
 a {
     color: $primary-100;
-    transition: background-color 0.3s ease 0s, color 0.3s ease 0s;
+    transition:
+        background-color 0.3s ease 0s,
+        color 0.3s ease 0s;
     text-decoration: underline;
+
     &:hover {
         color: $secondary-100;
         outline: none;
     }
+
     &.tab-outline {
         outline-offset: rem(3px);
         outline: 1px solid;
         // border-radius: 6px;
     }
+
     p & {
         font-weight: 700;
+
         &:focus {
             outline: none;
             border: 1px solid;
             border-radius: 6px;
         }
     }
+
     .bg-dark & {
         color: $white;
+
         &:hover {
             color: $secondary-100;
         }
     }
-
 }
 
 /* Tables
@@ -315,6 +367,7 @@ a {
 table {
     border-spacing: 0;
     border-collapse: collapse;
+
     td {
         text-align: left;
         font-weight: normal;
@@ -333,6 +386,7 @@ table {
     width: 100%;
     max-width: 100%;
     text-align: left;
+
     td,
     th {
         vertical-align: bottom;
@@ -341,12 +395,11 @@ table {
     }
 }
 
-
-.fancybox__content{
-    > .carousel__button.is-close{
+.fancybox__content {
+    >.carousel__button.is-close {
         top: rem(-50px);
         right: 0;
     }
-} 
+}
 
 // Dark Background
