--- a/source/scss/base/_utilities.scss
+++ b/source/scss/base/_utilities.scss
@@ -7,7 +7,7 @@
     --gutter: #{$gutters};
     // max-width: calc(var(--container-width, none) + var(--gutter) * 2);
     // width: min(100%, calc(var(--container-width, none) + var(--gutter) * 2));
-    width: min(100% - var(--gutter) * 2, var(--container-width, none));
+    width: min(100% - var(--gutter) * 2, var(--container-width, 100%));
     margin-left: auto;
     margin-right: auto;
     // padding-left: var(--gutter);
