--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ Theme Name: Custom Theme
 Author: Admin
 Version: 1.1
 Text Domain : custom-wp
-Description: The Noblis template website theme.
+Description: The Custom template website theme.
 */
