--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: MyTheme
+Theme Name: ThemeName
 Author: Admin
 Description: MyTheme is a blank canvas for your WordPress project.
 Version: 1.0.0
@@ -7,7 +7,7 @@ Tested up to: 6.7
 Requires PHP: 7.4
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: mytheme
+Text Domain: textdomain
 Tags: custom-background, custom-logo, custom-menu, featured-images, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
